--- a/src/Components/SideBar/Sidebar.css
+++ b/src/Components/SideBar/Sidebar.css
@@ -1,13 +1,13 @@
 .sidebar_section{
     display: flex;
-    /* background: #030303da; */
     padding-left: 0px !important;
     padding-right: 0px !important;
+    background-color: #030303da;
 }
 .sidebar{
     height: 100vh;
     width: 95px;
-    background: #030303da;
+    background-color: #030303da;
     position: fixed;
 }
 .icon_for_sidebar_expand{
