--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,13 +1,61 @@
 .home{
-
-    height: 400px;
+    width: 68%;
+    position: relative;
+    height: 200px;
     color: whitesmoke;
+    
+    
 }
-.home_content h1{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    line-height: 400px;
-    margin: auto;
+.home_content{   
     padding: 10px;
+    margin-top: 100px;
+}
+.home_content h4{
+    color: rgb(255, 242, 0);
+    text-shadow: 2px 2px 4px rgb(120, 28, 207);
+}
+.btn-container{
+    display: flex;
+}
+.hire-me-btn{
+    background-color: #f48249;
+    text-align: center;
+    width: 180px;
+    border-radius: 90px;
+    border: 2px solid goldenrod;
+    cursor: pointer;
+    padding: 10px;
+    font-size: 17px;
+    margin-top: 10px;
+    box-shadow: 1px 1px 10px rgb(120, 28, 207);
+}
+.hire-me-btn:hover{
+    background-color: beige;
+    width: 250px;
+    color: black;
+    transition-duration: 1s;
+
+}
+.get-resume-btn{
+    background-color: rgb(255, 89, 0);
+    text-align: center;
+    width: 180px;
+    border-radius: 90px;
+    border: 2px solid goldenrod;
+    cursor: pointer;
+    padding: 10px;
+    box-shadow: 1px 1px 10px rgb(120, 28, 207);
+    font-size: 17px;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+.get-resume-btn:hover{
+    background-color: beige;
+    width: 250px;
+    color: black;
+    transition-duration: 1s;
+}
+.get-resume-btn a{
+    text-decoration: none;
+    color: black;
 }
