--- a/src/Components/SideBar/SidebarList.css
+++ b/src/Components/SideBar/SidebarList.css
@@ -1,11 +1,12 @@
 .profile_pic_nav img{
-    width: 150px;
-    height: 180px;
-    border-radius: 90px;
-    margin-top: 0px;
+    width: 120px;
+    height: 150px;
+    border-radius: 70px;
+    
     display: flex;
     vertical-align: middle;
     margin: 0 auto;
+    margin-top: 0px;
     object-fit: cover;
     border: 3px solid blueviolet;
     box-shadow: -10px 0px 30px rgba(128, 1, 248, 0.5);
@@ -14,8 +15,9 @@
 .navbar_items ul li{
     color: white;
     list-style-type: none;
-    margin-top: 20px;
+    margin-top: 15px;
     cursor: pointer;
+    font-size: 15px;
 }
 .navbar_items ul li svg{
  margin-left: 15px;
