--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,3 +1,52 @@
 .contact-section{
+margin-top: 100px;
+margin-bottom: 50px;
+box-shadow: 2px 2px 10px gray;
+padding: 10px;
+}
+.contact-img img{
+    height: 80%;
+    width: 100%;
+    border-radius: 20px;
+    object-fit: cover;
+}
+.contact-form input{
+    height: 50px;
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+   
+    width: 100%;
+}
+.custom-select{
+    height: 50px;
+    border-radius: 10px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 100%;
+   
+}
+.contact-form textarea{
     
+    border-radius: 20px;
+    margin-top: 10px;
+    padding: 10px;
+    margin-bottom: 20px;
+    width: 100%;
+}
+.button-submit p{
+    background-color: black;
+    padding: 10px;
+    border-radius: 30px;
+    width: 50%;
+    margin-top: 50px;
+    color: rgb(141, 212, 186);
+    display: flex;
+    justify-content: center;
+    margin: 0px auto;
+    cursor: pointer;
+}
+.button-submit p:hover{
+    background-color: rgb(152, 8, 35);
+    transition-duration: 1s;
 }
