--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -3,6 +3,7 @@ margin-top: 100px;
 margin-bottom: 50px;
 box-shadow: 2px 2px 10px gray;
 padding: 10px;
+border-radius: 30px;
 }
 .contact-img img{
     height: 80%;
