--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,9 @@
   transition-duration: 1s;
 }
 #dark{
-  background-color: rgb(72, 50, 72);
+  background-color: #483349 ;
   color: white;
+}
+#light{
+  background-color: rgba(34, 25, 28, 0.1);
 }
