--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,9 +1,16 @@
 .contact-section{
 margin-top: 100px;
-margin-bottom: 50px;
+padding: 50px;
 box-shadow: 2px 2px 10px gray;
 padding: 10px;
 border-radius: 30px;
+
+}
+#dark .contact-section{
+    background-color: rgba(128, 0, 128, .5);
+    box-shadow: 10px 9px 22px -7px rgba(0,0,0,0.46);
+    -webkit-box-shadow: 10px 9px 22px -7px rgba(0,0,0,0.46);
+    -moz-box-shadow: 10px 9px 22px -7px rgba(0,0,0,0.46);
 }
 .contact-img img{
     height: 80%;
@@ -12,12 +19,24 @@ border-radius: 30px;
     object-fit: cover;
 }
 .contact-form input{
+
     height: 50px;
     border-radius: 20px;
     margin-top: 10px;
     margin-bottom: 20px;
    
     width: 100%;
+}
+#dark .contact-form input{
+    background-color: rgba(128, 0, 128, .5);
+    border: 2px solid gold;
+    color: white;
+}
+#dark .custom-select{
+    background-color: rgba(128, 0, 128, .5);
+    border: 2px solid gold;
+    color: white;
+   
 }
 .custom-select{
     height: 50px;
@@ -26,6 +45,11 @@ border-radius: 30px;
     margin-bottom: 20px;
     width: 100%;
    
+}
+#dark .contact-form textarea{
+    background-color: rgba(128, 0, 128, .5);
+    border: 2px solid gold;
+    color: white;
 }
 .contact-form textarea{
     
