--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -74,6 +74,7 @@
     border-radius: 30px;
     cursor: pointer;
     z-index: 1;
+    margin-right: 10px;
 }
 .sunTheme{
     animation: rotationSun infinite  5s linear ;
