--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,8 +1,20 @@
 .projectList{
-    box-shadow: -4px -4px 10px rgb(118, 111, 98);
+    box-shadow: -10px 9px 22px -7px rgba(0,0,0,0.46);
+    -webkit-box-shadow: -10px 9px 22px -7px rgba(0,0,0,0.46);
+    -moz-box-shadow: -10px 9px 22px -7px rgba(0,0,0,0.46);
     margin: 10px;
     padding: 10px;
     border-radius: 40px 10px;
+}
+#dark .projectList{
+    background-color: #38004c;
+    box-shadow: -12px 9px 22px -7px rgba(0,0,0,0.46);
+    -webkit-box-shadow: -12px 9px 22px -7px rgba(0,0,0,0.46);
+    -moz-box-shadow: -12px 9px 22px -7px rgba(0,0,0,0.46);
+}
+#dark .projectList:hover{
+    color: gold;
+    background-color: rgb(11, 11, 11);
 }
 .projectList:hover{
     border-bottom: 5px solid rgb(138, 16, 138);
@@ -25,7 +37,7 @@
     font-size: 14px;
     
     text-align: center;
-    box-shadow: 2px 2px 4px gray;
+    box-shadow: 2px 2px 4px rgb(79, 74, 74);
     
 }
 .techUsed:hover{
