--- a/src/Components/SideBar/Sidebar.css
+++ b/src/Components/SideBar/Sidebar.css
@@ -9,6 +9,7 @@
     width: 80px;
     background-color: #030303da;
     position: fixed;
+    z-index: 1;
 }
 .icon_for_sidebar_expand{
     display: flex;
